# oidc-cli

./: .gitignore  LICENSE  README.rst  default.nix  pyproject.toml  result  shell.nix
.github/workflows/: publish.yaml
nix/: default.nix  overlay.nix  sources.json
oidc_cli/: argument.py  callback.py  console.py  provider.py
tests/: test_oidc_cli.py
