[tool.poetry]
name = "oidc-cli"
version = "0.1.0"
description = ""
authors = ["Xing Yang <xor@jecity.net>"]

[tool.poetry.scripts]
oidc = 'oidc_cli.console:run'

[tool.poetry.dependencies]
python = "^3.6"
oidcrp = "^0.8.0"
cherrypy = "^18.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
